--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@prisma/client": "^6.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/pg": "^8.11.14",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.15.6",
+    "svix": "^1.64.1",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
