--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,46 @@
+# Node modules
+node_modules/
+
+# Build output
+dist
+dist/
+build/
+
+# Environment variables
 .env
-node_modules
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+logs/
+*.log
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# TypeScript
+*.tsbuildinfo
+
+# Coverage
+coverage/
+
+# Misc
+*.local
+*.cache
+.next/
+
+# Prisma
+prisma/dev.db
+prisma/dev.db-journal
+
+# Optional: ignore test output
+/test-results/
