--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/pg": "^8.11.14",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +30,8 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "prisma": "^6.7.0"
+    "@types/node": "^22.15.3",
+    "prisma": "^6.7.0",
+    "ts-node": "^10.9.2"
   }
 }
