--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.15.6",
     "svix": "^1.64.1",
